# inksurf

./: .gitignore  Cargo.toml  README.md  auto_char.csv  auto_char_6383.csv  build.rs  gradient_measured.csv  memory.x
.cargo/: config.toml
deploy/: 99-inksurf.rules  inksurf.service  install.sh
host/: Cargo.toml
host/src/: main.rs
src/: main.rs  panel_jd79667.rs  panel_ssd1680.rs
tide-display/: Cargo.toml
tide-display/src/: main.rs
